--- a/index.html
+++ b/index.html
@@ -299,9 +299,9 @@
                         <a class="dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" >More <span class="caret"></span></a>
                         <div class="dropdown-menu" aria-labelledby="dropdownMenu1" style="padding: 10px">
                           <div>
-                          <p href="#">Support </p>
-                         <p href="#faq">FAQ's</p>
-                          <p href="#">Chat</p>
+                          <p>Support </p>
+                         <p ><a href="#faq" style="padding: 0px; color:#888">FAQ's</a></p>
+                          <p >Chat</p>
                         </div>
                         </div>
                       </div></li>
@@ -652,7 +652,7 @@
                     </div>
                   </div>
                   <div class="s-info">
-                    <i class="fa fa-paper-plane"></i>
+                    <i class="fa fa-envelope"></i>
                     <div class="meta-content">
                       <span><a href="mailto:sales@smartsight.ai" class="" data-cfemail="">sales@smartsight.ai</a></span>
       
